--- a/darkerr.user.css
+++ b/darkerr.user.css
@@ -1,6 +1,6 @@
 /* ==UserStyle==
 @name           Darkerr
-@version        3.0.0-beta8
+@version        3.0.0-beta9
 @namespace      https://github.com/iFelix18/
 @description    A darker theme for Sonarr, Radarr & Lidarr
 @author         Felix
@@ -229,6 +229,10 @@
   }
 
   .form-input::-webkit-input-placeholder {
+    color: #fff;
+  }
+
+  .form-input::-moz-placeholder {
     color: #fff;
   }
 
@@ -638,8 +642,14 @@
   }
 
   [class^='Tooltip-tooltipContainer'] [class^='Tooltip-bottom'][class^='Tooltip-inverse'],
-  [class^='Tooltip-tooltipContainer'] [class^='Tooltip-tooltip'][class^='Tooltip-inverse'] {
-    background-color: #252525;
+  [class^='Tooltip-tooltipContainer'] [class^='Tooltip-bottom'][class*='Tooltip-default'],
+  [class^='Tooltip-tooltipContainer'] [class^='Tooltip-tooltip'][class^='Tooltip-inverse'],
+  [class^='Tooltip-tooltipContainer'] [class^='Tooltip-tooltip'][class*='Tooltip-default'] {
+    background-color: #353535;
+  }
+
+  [class^='Tooltip-tooltipContainer'] [class*='Tooltip-right'][class*='Tooltip-default'] {
+    border-right-color: #353535;
   }
 
   [class^='Tooltip-tooltipContainer'] [class^='Label-info'] {
@@ -651,6 +661,11 @@
   [class^='Tooltip-tooltipContainer'] [class^='Label-info']:hover {
     background-color: #353535;
     border-color: #353535;
+  }
+
+  [class^='Tooltip-tooltipContainer'] [class^='Popover-title'] {
+    background-color: #353535;
+    border-bottom-color: #353535;
   }
 
   [class^='Popover-popoverContainer'] [class^='Popover-popover'] {
@@ -811,7 +826,7 @@
     }
 
     [class^='About-descriptionList'][class*='DescriptionList-descriptionList']>span:nth-child(1)>[class^='DescriptionListItemDescription-description']::after {
-      content: '\A 3.0.0-beta8';
+      content: '\A 3.0.0-beta9';
       white-space: pre;
     }
   }
@@ -824,7 +839,7 @@
     }
 
     [class^='About-descriptionList'][class*='DescriptionList-descriptionList']>span:nth-child(2)>[class^='DescriptionListItemTitle-title']::before {
-      content: '3.0.0-beta8 \A';
+      content: '3.0.0-beta9 \A';
       font-weight: normal;
       white-space: pre;
     }
